--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav id="main-nav">
       <ul>
-        <li><a href="inicio.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="destinos.html">Destinos</a></li>
         <li><a href="consejos.html">Consejos</a></li>
         <li><a href="contacto.html">Contáctanos</a></li>
@@ -100,7 +100,7 @@
       <p>Creado por Pablo Hebrero</p>
       <nav id="footer-nav">
         <ul>
-          <li><a href="inicio.html">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="destinos.html">Destinos</a></li>
           <li><a href="consejos.html">Consejos</a></li>
           <li><a href="contacto.html">Contáctanos</a></li>
